# canonicalwebteam.store-api

./: .gitignore  README.md  pyproject.toml
.github/workflows/: api_tests.yaml  publish.yaml  release-drafter.yml  tests.yaml
canonicalwebteam/: exceptions.py  retry_utils.py  snap_recommendations.py
canonicalwebteam/store_api/: base.py  dashboard.py  devicegw.py  exceptions.py  publisher.py  publishergw.py  requests.py  store.py  utils.py
canonicalwebteam/store_api_deprecated/: publisher.py  store.py
canonicalwebteam/stores_web_redis/: utility.py
refactor_docs/: dashboard.md  devicegw.md  overview.md  publishergw.md
tests/: test_base.py  test_charmhub_publisher_api.py  test_dashboard.py  test_device_gateway.py  test_publisher_gateway.py  test_publisher_gateway_auth.py  test_retry_decorator.py  test_retry_helpers.py  test_snap_recommendation.py  test_snapcraft_admin_api.py  test_snapcraft_store_api.py  test_store_api.py  test_stores_web_redis.py
tests/cassettes/: CharmPublisherTest.test_get_account_packages.yaml  CharmPublisherTest.test_get_account_packages_all_charms.yaml  CharmPublisherTest.test_get_account_packages_published_charms.yaml  CharmPublisherTest.test_get_account_packages_registered_charms.yaml  CharmPublisherTest.test_get_macaroon.yaml  CharmPublisherTest.test_whoami.yaml  DashboardTest.test_get_account.yaml  DashboardTest.test_get_account_keys.yaml  DashboardTest.test_get_agreement.yaml  DashboardTest.test_get_macaroon.yaml  DashboardTest.test_get_package_upload_macaroon.yaml  DashboardTest.test_get_snap_id.yaml  DashboardTest.test_get_snap_info.yaml  DashboardTest.test_get_snap_revision.yaml  DashboardTest.test_get_store.yaml  DashboardTest.test_get_store_invites.yaml  (+92 more)
(+5 files in other folders)
