[tool.poetry]
name = 'canonicalwebteam.store-api'
version = '2.3.5'
description = ''
authors = ['Canonical Web Team <webteam@canonical.com>']
license = 'LGPL-3.0'
readme = 'README.md'

[[tool.poetry.packages]]
include = 'canonicalwebteam'

[tool.poetry.dependencies]
python = '^3.6'
coverage = '^5.2'
pymacaroons = '0.13.0'
requests = '^2.24.0'

[tool.poetry.dev-dependencies]
vcrpy-unittest = '^0.1.7'

[build-system]
requires = ['poetry>=0.12']
build-backend = 'poetry.masonry.api'
