[tool.poetry]
name = 'canonicalwebteam.store-api'
version = '7.3.8'
description = ''
authors = ['Canonical Web Team <webteam@canonical.com>']
license = 'LGPL-3.0'
readme = 'README.md'

[[tool.poetry.packages]]
include = 'canonicalwebteam'

[tool.poetry.dependencies]
python = '^3.9'
coverage = '^7.0'
pymacaroons = '0.13.0'
requests = '^2.32.2'
mypy = "^1.14.1"
redis = "^6.4.0"
cachetools = "^6.2.0"

[tool.poetry.dev-dependencies]
vcrpy-unittest = '^0.1.7'

[build-system]
requires = ['poetry.core>=1.3']
build-backend = 'poetry.core.masonry.api'

[tool.mypy]
ignore_missing_imports = true
